--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,7 @@
         android:layout_marginStart="19dp"
         android:layout_marginTop="152dp"
         android:layout_marginEnd="20dp"
+        android:onClick="onClickScores"
         android:text="High Scores"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -52,6 +53,7 @@
         android:layout_marginStart="19dp"
         android:layout_marginTop="92dp"
         android:layout_marginEnd="20dp"
+        android:onClick="onClickCars"
         android:text="Play Cars"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -65,6 +67,7 @@
         android:layout_marginStart="19dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="20dp"
+        android:onClick="onClickStandard"
         android:text="Play Standard"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
