--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,6 +47,20 @@
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
+        android:id="@+id/button7"
+        android:layout_width="372dp"
+        android:layout_height="47dp"
+        android:layout_marginStart="19dp"
+        android:layout_marginTop="212dp"
+        android:layout_marginEnd="20dp"
+        android:onClick="onClickCarScores"
+        android:text="@string/cars_high_scores"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <Button
         android:id="@+id/button3"
         android:layout_width="372dp"
         android:layout_height="47dp"
@@ -79,7 +93,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="296dp"
+        android:layout_marginTop="330dp"
         android:layout_marginEnd="16dp"
         android:checkedButton="@id/radioButton3"
         app:layout_constraintEnd_toEndOf="parent"
