--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,11 +21,12 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="372dp"
+        android:layout_width="0dp"
         android:layout_height="47dp"
         android:layout_marginStart="19dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="16dp"
+        android:onClick="onExit"
         android:text="@string/exit"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -34,7 +35,7 @@
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="372dp"
+        android:layout_width="0dp"
         android:layout_height="47dp"
         android:layout_marginStart="19dp"
         android:layout_marginTop="152dp"
@@ -48,7 +49,7 @@
 
     <Button
         android:id="@+id/button7"
-        android:layout_width="372dp"
+        android:layout_width="0dp"
         android:layout_height="47dp"
         android:layout_marginStart="19dp"
         android:layout_marginTop="212dp"
@@ -62,7 +63,7 @@
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="372dp"
+        android:layout_width="0dp"
         android:layout_height="47dp"
         android:layout_marginStart="19dp"
         android:layout_marginTop="92dp"
@@ -76,7 +77,7 @@
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="372dp"
+        android:layout_width="0dp"
         android:layout_height="47dp"
         android:layout_marginStart="19dp"
         android:layout_marginTop="32dp"
